environments/dev/apps/authservice/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice-service
spec:
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
