environments/dev/apps/authservice/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authservice-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.hemant.cloud
      secretName: authservice-tls
  rules:
    - host: auth.hemant.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authservice-service
                port:
                  number: 80
